Timeline & Coup displaying same content; Groups modal reference cutoff; Map title cutoff bugs

--- a/src/components/map/MapMobile.css
+++ b/src/components/map/MapMobile.css
@@ -1,3 +1,7 @@
+#splash-container-mobile{
+  padding-top: 10em;
+}
+
 .mapdiv-m {
   width: 100vw;
   height: 85vh;
@@ -10,6 +14,11 @@
 
 .map-info-container-m {
   display: none;
+  overflow: auto;
+}
+
+#detail-title {
+  padding-top: 5em;
 }
 
 .detail-title-m {
